# ondewo-csi-client-python

./: .flake8  .gitignore  .gitmodules  .isort.cfg  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.utils  Makefile  README.md  RELEASE.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: tests.yml
envs/: versions.env
examples/: .speech2speech_example.py.swp  convert_files.py  environment.env  example.py  healthcheck_example.py  keycloak_auth_example.py  multi_client_example.py  requirements.txt  s2s_pipelines_example.py  s2s_stream_example.py  s2s_streaming_example.py  s2t.json  speech2speech_example.py  speech2speech_with_hangup_example.py  streamer.py  voice_get_intent.py
examples/configs/: keycloak_grpc_placeholder.json
ondewo/csi/: conversation_pb2.py  conversation_pb2.pyi  conversation_pb2_grpc.py
ondewo/csi/client/: async_client.py  async_services_container.py  client.py  client_config.py  services_container.py
ondewo/csi/client/core/: async_services_interface.py  services_interface.py
ondewo/csi/client/services/: async_conversations.py  conversations.py
ondewo/csi/client/utils/: keycloak.py
ondewo/csi/examples/: convert_files.py  example.env  healthcheck_example.py  multi_client_example.py  s2s_pipelines_example.py  s2s_streaming_example.py  speech2speech_example.py  streamer.py  trigger_intent_example.py  trigger_intent_proposal.py
ondewo/t2s/: text_to_speech_pb2.pyi
tests/unit/client/: test_client_config.py  test_conversations_metadata.py  test_keycloak.py
tests/unit/examples/: test_examples.py
tutorials/: Jupyter_demo.ipynb  Jupyter_demo_helper.ipynb  Jupyter_extended_demo__messy.ipynb  Jupyter_tutorial_colab.ipynb  README.md  Untitled.ipynb  Untitled1.ipynb
tutorials/t2s_examples/: requirements.txt
